--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,9 @@ title: "Home"
 
 I'm a conlanger who creates artistic languages that I usually intend to be more or less naturalistic in nature. I also happen to be a linguist (PhD awarded 2021) and work predominantly in the fields of phonetics and phonology.
 
-I've been constructing languages as a hobby since I was an undergrad and here you can find uploads of and links to some of my work. This currently includes some bits and pieces from [Kamya](kamya/index.qmd), [Xwere Gonom](xwere-gonom/index.qmd), [Sar̃ifa](sarifa/index.qmd) and [Anderiva](anderiva/index.qmd). My GitHub also hosts [Lexifer Plus](https://github.com/keras-saryan/lexifer-plus), a customised version of the word generator [Lexifer Online](https://lingweenie.org/conlang/lexifer-app.html).
+I've been constructing languages as a hobby since I was an undergrad and here you can find uploads of and links to some of my work. This currently includes some bits and pieces from [Kamya](kamya/index.qmd), [Xwere Gonom](xwere-gonom/index.qmd), [Sar̃ifa](sarifa/index.qmd) and [Anderiva](anderiva/index.qmd)
+
+My GitHub also hosts a couple of tools for conlangers I've put together. [Lexifer Plus](https://github.com/keras-saryan/lexifer-plus) is a customised version of the word generator [Lexifer Online](https://lingweenie.org/conlang/lexifer-app.html) and [Grambank Comparator](https://keras-saryan.shinyapps.io/grambank-comparator/) is a Shiny app for comparing your language with those languages included in the Grambank sample.
 
 ## Contact
 
