--- a/anderiva/index.qmd
+++ b/anderiva/index.qmd
@@ -9,3 +9,5 @@ The language has a very small phonemic inventory (6 consonants, 3 oral vowels, 3
 ## Output
 
 In October 2025, I gave a presentation entitled *Kut bero mi...* at [Kopikon II](https://kopikon.com/kopikon2/) in which I used an original short story to showcase certain of the language (slides [here](https://keras-saryan.github.io/kopikon-ii/), the clipped video [here](https://www.youtube.com/watch?v=uXeZs-ofl4I) and the full livestream [here](https://www.youtube.com/live/Vmyr10xHv3A?si=EkzrLEfhXemJjQFJ&t=3174)).
+
+I used Anderiva throughout Lexember in 2025 and the full final PDF of each day's entry can be found [here](../files/anderiva-lexember-2025.pdf).
